Integrated update to portfolio

--- a/app/views/portfolios/edit.html.erb
+++ b/app/views/portfolios/edit.html.erb
@@ -1,4 +1,4 @@
-<h1> Create a new Portfolio Item</h1>
+<h1> Edit a Portfolio Item</h1>
 
 <%= form_for(@portfolio_items) do |form| %>
   
@@ -17,6 +17,6 @@
     </div>
   
     <div class="actions">
-      <%= form.submit  "Create" %>
+      <%= form.submit  "Update" %>
     </div>
   <% end %>
